Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6970

llog_osd_put_cat_list() leaks thandle after failed declaration

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.8.0
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      This is in lustre-release/master as well. In llog_osd_put_cat_list() if dt_declare_record_write() fails then the thandle is never destroyed.

              th = dt_trans_create(env, d);
              if (IS_ERR(th))
                      GOTO(out, rc = PTR_ERR(th));
      
              lgi->lgi_buf.lb_len = size;
              lgi->lgi_buf.lb_buf = idarray;
              rc = dt_declare_record_write(env, o, &lgi->lgi_buf, lgi->lgi_off, th);
              if (rc)
                      GOTO(out, rc);
              ...
      out_trans:
              dt_trans_stop(env, d, th);
      out:
              lu_object_put(env, &o->do_lu);
              RETURN(rc);
      

            hongchao.zhang Hongchao Zhang
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: