LU-6970 llog: free thandle if declare failed

in llog_osd_put_cat_list, the "thandle" should be cleaned up
if the following "declare" operation failed.

Change-Id: I0befba0068cb91fe685502f1e833c2fb6d6477bd
Signed-off-by: Hongchao Zhang <hongchao.zhang@intel.com>
Reviewed-on: http://review.whamcloud.com/15951
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Niu Yawei <yawei.niu@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>